# hr-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/agent/: hr_agent.py  tools.py
app/bot/: candidates.py  commands.py  documents.py  handlers.py  interview_flow.py  keyboards.py  middlewares.py  offer_flow.py  onboarding_flow.py  onboarding_interactive.py  pagination.py  schedule_manager.py  states.py  surveys.py  telegram_bot.py  tests_onboarding.py  utils.py
app/core/: config.py  logger.py
app/db/: candidate_db.py  conversation_db.py  interview_db.py  jobs_db.py  postgres_connector.py  survey_db.py
app/models/: candidate.py  job.py  survey.py
app/services/: analytics_service.py  candidate_service.py  hr_facade.py  job_matcher.py  onboarding_generator.py  test_generator.py
app/utils/: charts.py  email_parser.py  email_sender.py  excel_export.py  export.py  file_parser.py  formatters.py  notification_sender.py  reminder.py
tests/: test_agent.py  test_bot_flow.py  test_candidate_db.py  test_formatters.py  test_generate_test.py  test_onboarding.py  test_search_candidates.py
